force-app/main/default/objects/CEL_Configurations__c/CEL_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CEL_Configurations</label>
</CustomObject>