force-app/main/default/objects/CEL_Configurations__c/fields/cel_gdpr_report_campaign__c.field-meta.xml
<CustomField>
    <fullName>cel_gdpr_report_campaign__c</fullName>
    <label>GDPR Report Campaign</label>
    <length>18</length>
    <type>Text</type>
</CustomField>