force-app/main/default/objects/CEL_Configurations__c/fields/cel_gpdr_report_customer_card__c.field-meta.xml
<CustomField>
    <fullName>cel_gpdr_report_customer_card__c</fullName>
    <label>GDPR Report Customer Card</label>
    <length>18</length>
    <type>Text</type>
</CustomField>