force-app/main/default/objects/CEL_Configurations__c/fields/cel_interface_user_id__c.field-meta.xml
<CustomField>
    <fullName>cel_interface_user_id__c</fullName>
    <label>Interface User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>