force-app/main/default/objects/CEL_Configurations__c/fields/cel_report_campaign_action__c.field-meta.xml
<CustomField>
    <fullName>cel_report_campaign_action__c</fullName>
    <label>Report Campaign Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>