force-app/main/default/objects/CEL_Configurations__c/fields/cel_report_campaign_lines__c.field-meta.xml
<CustomField>
    <fullName>cel_report_campaign_lines__c</fullName>
    <label>Report Campaign Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>