force-app/main/default/objects/CEL_Configurations__c/fields/cel_task_open_status__c.field-meta.xml
<CustomField>
    <fullName>cel_task_open_status__c</fullName>
    <label>Task open status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>